[package]
name = "backend-payment-system"
version = "0.1.0"
edition = "2021"

[dependencies]

tokio = {version = "1.42.0", features = ["full"]}
axum = "0.7.9"
# tower-http = "0.6.2"
sqlx = { version = "0.8.2", features = [ "postgres", "runtime-tokio-rustls", "macros", "uuid", "time", "rust_decimal", "chrono" , "default"] }

serde = {version = "1.0.216", features = ["derive"]} 
serde_json = "1.0.134"
serde-email = "3.1.0"

dotenv = "0.15.0"

tracing = "0.1.41"
tracing-subscriber = {version = "0.3.17", features = ["json", "fmt", "env-filter", "tracing"]}
tracing-appender = "0.2.3"
jsonwebtoken = "9.3"
argon2 = "0.5.3"
rust_decimal = "1.36"
uuid = { version = "1.11", features = ["serde", "v4"] }
chrono = { version = "0.4.39", features = ["serde"] }

rand = "0.8"
async-trait = "0.1.83"
futures = "0.3.31"
